# penney_game

./: DataGeneration.md  README.md  counts_cards.npy  counts_tricks.npy  main.py  pyproject.toml
data/tables/: winrates_cards.csv  winrates_cards_n100000.csv  winrates_cards_n5000000.csv  winrates_tricks.csv  winrates_tricks_n100000.csv  winrates_tricks_n5000000.csv
data/tracking_decks/: counts_cards.npy  counts_tricks.npy
src/: classes.py  create_data.py  run_experiment.py  score_data.py
tests/: test_deck_creation.py  testing_scoring.py
write_ups/: Scoring.md
