[project]
name = "penney-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitarray>=3.7.1",
    "matplotlib>=3.10.6",
    "numba>=0.62.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pytest>=8.4.2",
    "seaborn>=0.13.2",
]
